[package]
name = "hexacell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hexacell"
path = "src/main.rs"

[features]
default = []
debug = ["bevy/dynamic", "bevy-inspector-egui"]

[dependencies]
bevy_easings = "0.8"
# chrono = "0.4"
rand = "0.8"

[dependencies.bevy]
version = "0.8"
# Disable the default features
default-features = false
features = ["bevy_core_pipeline", "bevy_asset", "bevy_sprite", "bevy_text", "x11"]
# perhaps: "bevy_render", "bevy_ui",  "bevy_audio", "bevy_winit", "bevy_scene",
#   "animation", "filesystem_watcher" , "wayland", "vorbis"

[dependencies.bevy-inspector-egui]
version = "0.12"
# Disable the default features
default-features = false
features = ["bevy_sprite"]
optional = true
# perhaps: "bevy_ui"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
