[package]
name = "honeycombs"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "honeycombs"
path = "src/main.rs"

[features]
default = []
debug = ["bevy/dynamic", "bevy-inspector-egui"]

[dependencies]
bevy_easings = "0.8"
# chrono = "0.4"
rand = "0.8"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
interactable = { path = "interactable" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
native-dialog = "0.6.3"

[dependencies.bevy]
version = "0.8"
# Disable the default features
default-features = false
features = ["bevy_core_pipeline", "bevy_asset", "bevy_sprite", "bevy_text", "bevy_audio", "x11", "vorbis", "png"]
# perhaps: "bevy_render", "bevy_ui",, "bevy_winit", "bevy_scene", "animation", "filesystem_watcher" , "wayland"

[dependencies.bevy-inspector-egui]
version = "0.12"
# Disable the default features
default-features = false
features = ["bevy_sprite"]
optional = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
