[package]
name = "honeycombs"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "honeycombs"
path = "src/main.rs"

[features]
default = []
debug = ["bevy/dynamic", "bevy-inspector-egui"]

[dependencies]
bevy_asset_loader = "0.12.1"
bevy_easings = "0.8"
bevy_kira_audio = "0.12"
image = "0.24"
rand = "0.8"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
winit = "0.26.1"
interactable = { path = "interactable" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6.3"

[dependencies.bevy]
version = "0.8"
# Disable the default features
default-features = false
features = ["bevy_core_pipeline", "bevy_asset", "bevy_sprite", "bevy_text", "x11", "png", "filesystem_watcher"]
# perhaps: "bevy_render", "bevy_ui",, "bevy_winit", "bevy_scene", "animation" , "wayland"

[dependencies.bevy-inspector-egui]
version = "0.12"
# Disable the default features
default-features = false
features = ["bevy_sprite"]
optional = true

# Windows app icon
[build-dependencies]
embed-resource = "1.6.3"
static_vcruntime = "2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
